add delete story,  get qa image
